--- a/.github/workflows/dotnet-plugin.yml
+++ b/.github/workflows/dotnet-plugin.yml
@@ -29,3 +29,7 @@ jobs:
 
             - run: dotnet test --no-restore
               working-directory: sdk/@launchdarkly/observability-dotnet
+
+            - name: Lint
+              run: dotnet format --verify-no-changes
+              working-directory: sdk/@launchdarkly/observability-dotnet
