--- a/sdk/@launchdarkly/observability-dotnet/Makefile
+++ b/sdk/@launchdarkly/observability-dotnet/Makefile
@@ -6,21 +6,22 @@ help:
 	@echo "  build     - Build the solution"
 	@echo "  test      - Run tests"
 	@echo "  docs      - Build documentation"
+	@echo "  lint      - Run linting"
 	@echo "  help      - Show this help message"
 
 install:
 	dotnet restore
 
 build:
-	dotnet restore
 	dotnet build LaunchDarkly.Observability.sln
 
 test:
-	dotnet restore
 	dotnet test LaunchDarkly.Observability.sln
 
+lint:
+	dotnet format --verify-no-changes
+
 docs:
-	dotnet restore
 	dotnet tool update -g docfx
 	docfx metadata
 	docfx build
