chore: Add dotnet release-please support. (#197)
## Summary

Adds release please support for the dotnet observability plugin.
Also adds documentation builds.

## How did you test this change?
Ran manual publish and manual docs.

Links:
https://www.nuget.org/packages/LaunchDarkly.Observability/

https://launchdarkly.github.io/observability-sdk/sdk/@launchdarkly/observability-dotnet/

## Are there any deployment considerations?

<!--
 Backend - Do we need to consider migrations or backfilling data?
-->

--- a/sdk/@launchdarkly/observability-dotnet/src/LaunchDarkly.Observability/LaunchDarkly.Observability.csproj
+++ b/sdk/@launchdarkly/observability-dotnet/src/LaunchDarkly.Observability/LaunchDarkly.Observability.csproj
@@ -37,6 +37,11 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup> 
+
   <ItemGroup>
     <!-- Open Telemetry Dependencies -->
     <PackageReference Include="OpenTelemetry" Version="1.12.0" />
