--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -30,6 +30,14 @@ on:
                 description: 'The tag name for the python package. Should be set when publishing a python package.'
                 type: string
                 required: false
+            release_launchdarkly_dotnet:
+                description: 'Should release @launchdarkly/observability-dotnet package.'
+                type: boolean
+                required: true
+            dotnet_tag_name:
+                description: 'The tag name for the dotnet package. Should be set when publishing a dotnet package.'
+                type: string
+                required: false
 
 permissions:
     id-token: write
@@ -146,3 +154,34 @@ jobs:
                   aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
                   dry-run: ${{ inputs.dry-run }}
                   prerelease: ${{ inputs.prerelease }}
+
+    publish-dotnet-sdk:
+        runs-on: ubuntu-latest
+        if: ${{ inputs.release_launchdarkly_dotnet == true }}
+        permissions:
+            id-token: write
+        outputs:
+            package-hashes: ${{ steps.publish.outputs.package-hashes }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - name: Publish .NET SDK
+              id: publish
+              uses: ./.github/actions/publish-dotnet-sdk
+              with:
+                  aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
+                  dry-run: ${{ inputs.dry-run }}
+
+    publish-dotnet-sdk-provenance:
+        needs: ['publish-dotnet-sdk']
+        if: ${{ inputs.release_launchdarkly_dotnet == true && inputs.dry-run == false }}
+        permissions:
+            actions: read
+            id-token: write
+            contents: write
+        uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v2.0.0
+        with:
+            base64-subjects: '${{ needs.publish-dotnet-sdk.outputs.package-hashes }}'
+            upload-assets: true
+            upload-tag-name: ${{ inputs.dotnet_tag_name }}
