--- a/sdk/@launchdarkly/observability-android/gradle/libs.versions.toml
+++ b/sdk/@launchdarkly/observability-android/gradle/libs.versions.toml
@@ -2,10 +2,12 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-junit-jupiter = "5.12.1"
+junit-jupiter = "5.13.4"
 
 [libraries]
-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
+junit-bom = { module = "org.junit:junit-bom", version.ref = "junit-jupiter" }
+junit-jupiter = { module = "org.junit.jupiter:junit-jupiter" }
+junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 
 [plugins]
 kotlin-android = { id = "org.jetbrains.kotlin.android", version = "2.1.20" }
