--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -47,15 +47,13 @@ jobs:
                   aws-role-arn: ${{ vars.AWS_ROLE_ARN }}
 
     release-python-docs:
-        runs-on: ubuntu-latest
+        needs: ['release-package', 'release-python-plugin']
         permissions:
             contents: write
-        needs: ['release-python-plugin']
-        steps:
-            - name: Build and Publish Docs
-              uses: launchdarkly/observability-sdk/.github/workflows/manual-publish-docs.yml@main
-              with:
-                  workspace_path: sdk/@launchdarkly/observability-python
+        uses: launchdarkly/observability-sdk/.github/workflows/manual-publish-docs.yml@main
+        with:
+            workspace_path: sdk/@launchdarkly/observability-python
+
 
     release-python-provenance:
         needs: ['release-package', 'release-python-plugin']
@@ -108,16 +106,12 @@ jobs:
                   dry-run: false
 
     release-dotnet-plugin-docs:
-        runs-on: ubuntu-latest
+        needs: ['release-package', 'release-dotnet-plugin']
         permissions:
             contents: write
-        needs: ['release-package', 'release-dotnet-plugin']
-        if: ${{ needs.release-package.outputs.dotnet-plugin-released == 'true' }}
-        steps:
-            - name: Build and Publish Docs
-              uses: launchdarkly/observability-sdk/.github/workflows/manual-publish-docs.yml@main
-              with:
-                  workspace_path: sdk/@launchdarkly/observability-dotnet
+        uses: launchdarkly/observability-sdk/.github/workflows/manual-publish-docs.yml@main
+        with:
+            workspace_path: sdk/@launchdarkly/observability-dotnet
 
     release-dotnet-sdk-provenance:
         needs: ['release-package', 'release-dotnet-plugin']
