--- a/release-please-config.json
+++ b/release-please-config.json
@@ -63,6 +63,13 @@
 			"versioning": "default",
 			"include-v-in-tag": false,
 			"include-component-in-tag": true
+		},
+		"sdk/highlight-run": {
+			"package-name": "highlight.run",
+			"release-type": "node",
+			"versioning": "default",
+			"include-v-in-tag": false,
+			"include-component-in-tag": true
 		}
 	}
 }
