--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,10 @@
 {
+	"plugins": [
+		{
+			"type": "node-workspace",
+			"updatePeerDependencies": false
+		}
+	],
 	"packages": {
 		"sdk/@launchdarkly/observability-python": {
 			"package-name": "launchdarkly-observability-python",
