--- a/sdk/@launchdarkly/observability-android/gradle/libs.versions.toml
+++ b/sdk/@launchdarkly/observability-android/gradle/libs.versions.toml
@@ -3,3 +3,4 @@
 
 [plugins]
 kotlin-android = { id = "org.jetbrains.kotlin.android", version = "2.1.20" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "2.1.20" }
