--- a/e2e/android/app/src/debug/assets/get_sampling_config_response.json
+++ b/e2e/android/app/src/debug/assets/get_sampling_config_response.json
@@ -25,7 +25,7 @@
 						"regexValue": "Database connection .*"
 					},
 					"severityText": {
-						"matchValue": "ERROR"
+						"matchValue": "WARN"
 					},
 					"attributes": [
 						{
