--- a/.prettierignore
+++ b/.prettierignore
@@ -23,3 +23,4 @@ highlight.io/out
 sdk/highlightinc-highlight-datasource/grafana/data
 sdk/highlight-php
 sdk/@launchdarkly/observability-dotnet
+sdk/@launchdarkly/launchdarkly_flutter_observability
