feat: Add basic configuration.

--- a/sdk/@launchdarkly/launchdarkly_flutter_observability/pubspec.yaml
+++ b/sdk/@launchdarkly/launchdarkly_flutter_observability/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     opentelemetry: 0.18.10
 
     launchdarkly_flutter_client_sdk: ^4.12.0
+    web: ^1.1.1
 
 dev_dependencies:
     flutter_test:
