--- a/e2e/opentelemetry/go/collector.yml
+++ b/e2e/opentelemetry/go/collector.yml
@@ -14,10 +14,10 @@ receivers:
 
 exporters:
     otlphttp:
-      tls:
-        insecure_skip_verify: true
-      endpoint: http://host.docker.internal:4318
-      # endpoint: https://otel.observability.ld-stg.launchdarkly.com:4318
+        tls:
+            insecure_skip_verify: true
+        endpoint: http://host.docker.internal:4318
+        # endpoint: https://otel.observability.ld-stg.launchdarkly.com:4318
 
 processors:
     attributes/environment:
@@ -47,7 +47,12 @@ service:
     pipelines:
         traces:
             receivers: [otlp]
-            processors: [tail_sampling/keep-errors-and-flags, attributes/environment, batch]
+            processors:
+                [
+                    tail_sampling/keep-errors-and-flags,
+                    attributes/environment,
+                    batch,
+                ]
             exporters: [otlphttp]
         metrics:
             receivers: [otlp]
