--- a/e2e/android/app/src/main/AndroidManifest.xml
+++ b/e2e/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -19,10 +21,15 @@
             android:exported="false"
             android:label="@string/title_activity_secondary"
             android:theme="@style/Theme.AndroidObservability" />
+        <service
+            android:name=".ObservabilityForegroundService"
+            android:exported="false" />
+        <service
+            android:name=".ObservabilityBackgroundService"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.AndroidObservability" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
