--- a/e2e/android/app/src/main/AndroidManifest.xml
+++ b/e2e/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             android:exported="false"
             android:label="@string/title_activity_secondary"
             android:theme="@style/Theme.AndroidObservability" />
+        <activity
+            android:name="com.smoothie.SmoothieListActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AndroidObservability" />
         <service
             android:name=".ObservabilityForegroundService"
             android:exported="false" />
