feat: Support ldMask() for Native and Compose views. (#295)
## Summary

1. Support ldMask() for Native and Compose views.
a. Native 
```
  view.ldMask()
```
b. Compose
```
 modifier = Modifier.ldMask()
```
2. 2 XML screens: Fruta and Credit Card
3. Make Compose User form rotate

## How did you test this change?

Test SR using RRWeb player on SecondaryActivity, Fruta(XML), Credit Card

<img width="660" height="1294" alt="image"
src="https://github.com/user-attachments/assets/f6cba822-fd59-43f1-9aac-040200e6dffb"
/>
<img width="324" height="655" alt="image"
src="https://github.com/user-attachments/assets/7f3d98f6-601d-4e6e-8f74-b0306c026717"
/>



<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> Adds ldMask for native Views and Compose, introduces
SensitiveAreasCollector to mask captured regions, and includes new
Credit Card and Smoothie sample screens.
> 
> - **SDK / Session Replay**:
> - **Masking API**: Add `View.ldMask()/ldUnmask()` and
`Modifier.ldMask()/ldUnmask()` in `MaskingViewAPI.kt`; define
`LdMaskSemanticsKey`.
> - **Sensitive Area Detection**: Introduce `SensitiveAreasCollector` to
gather sensitive rects from Compose semantics and native `View` tags;
add `view_tags.xml` ids.
> - **Capture Pipeline**: Refactor `CaptureSource` to use
`SensitiveAreasCollector` and apply gray masking over returned rects.
> - **E2E App**:
> - **New Screens (XML)**: Add `CreditCardActivity` and
`SmoothieListActivity` with layouts (`activity_credit_card.xml`,
`activity_smoothie_list.xml`, `item_smoothie.xml`) and
`SmoothieAdapter`; register in `AndroidManifest.xml` and add launch
buttons in `MainActivity`.
> - **Compose Demo**: Update `SecondaryActivity` to use
`Modifier.ldMask()` on header and animate rotation of the address card.
> - **UI/Dependencies**: Switch theme to
`Theme.Material3.DayNight.NoActionBar`; add
`androidx.recyclerview:recyclerview` dependency.
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
f04c7ebfe23774a26e3b9f7008a4927908bb

--- a/e2e/android/app/src/main/AndroidManifest.xml
+++ b/e2e/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
             android:exported="false"
             android:label="@string/title_activity_secondary"
             android:theme="@style/Theme.AndroidObservability" />
+        <activity
+            android:name=".CreditCardActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AndroidObservability" />
+        <activity
+            android:name="com.smoothie.SmoothieListActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AndroidObservability" />
         <service
             android:name=".ObservabilityForegroundService"
             android:exported="false" />
