--- a/e2e/android/app/src/main/AndroidManifest.xml
+++ b/e2e/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false"
             android:theme="@style/Theme.AndroidObservability" />
         <activity
-            android:name="com.smoothie.SmoothieListActivity"
+            android:name=".smoothie.SmoothieListActivity"
             android:exported="false"
             android:theme="@style/Theme.AndroidObservability" />
         <service
