--- a/sdk/@launchdarkly/observability-android/gradle.properties
+++ b/sdk/@launchdarkly/observability-android/gradle.properties
@@ -2,6 +2,7 @@
 # https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_configuration_properties
 
 android.useAndroidX=true
+android.disableResourceValidation=true
 
 #x-release-please-start-version
 version=0.16.0
