--- a/sdk/@launchdarkly/session-replay/package.json
+++ b/sdk/@launchdarkly/session-replay/package.json
@@ -34,8 +34,10 @@
 		"vitest": "^3.1.2"
 	},
 	"type": "module",
-	"main": "./dist/session-replay.js",
-	"module": "./dist/session-replay.js",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"unpkg": "./dist/index.umd.js",
+	"jsdelivr": "./dist/index.umd.js",
 	"types": "./dist/index.d.ts",
 	"files": [
 		"dist"
