--- a/sdk/@launchdarkly/observability/package.json
+++ b/sdk/@launchdarkly/observability/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@launchdarkly/observability",
-	"version": "0.4.11",
+	"version": "0.4.12-alpha.1",
 	"description": "Browser observability for your web app. Capture frontend metrics, errors, logs and traces.",
 	"keywords": [
 		"launchdarkly",
