--- a/sdk/@launchdarkly/session-replay/package.json
+++ b/sdk/@launchdarkly/session-replay/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@launchdarkly/session-replay",
-	"version": "0.4.11",
+	"version": "0.4.12-alpha.1",
 	"description": "Browser observability for your web app. Record session replays to visualize usage patterns.",
 	"keywords": [
 		"launchdarkly",
