Add masking support for WebViews
- Add maskWebViews support in PrivacyProfile; cover native Android WebView and third-party WebView variants
- Update MaskCollector traversal to reach AndroidView WebViews
- Add XML/Compose test activities and custom views
- Update README/tests

--- a/e2e/android/app/src/main/AndroidManifest.xml
+++ b/e2e/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,13 @@
             android:name=".smoothie.SmoothieListActivity"
             android:exported="false"
             android:theme="@style/Theme.AndroidObservability" />
+        <activity
+            android:name=".masking.ComposeWebActivity"
+            android:exported="false" />
+        <activity
+            android:name=".masking.XMLWebActivity"
+            android:exported="false" />
+
         <service
             android:name=".ObservabilityForegroundService"
             android:exported="false" />
