--- a/e2e/nestjs/package.json
+++ b/e2e/nestjs/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@eslint/js": "^9.26.0",
     "@highlight-run/nest": "workspace:*",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/cli": "^10.4.5",
@@ -28,10 +29,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "axios": "^1.6.8",
-    "eslint": "^8.42.0",
+    "eslint": "^9.26.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
@@ -43,7 +44,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^8.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
