--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
 		"react@19.0.0": "19.0.3",
 		"react-dom@^19.0.0": "19.0.3",
 		"react-dom@19.0.0": "19.0.3",
-		"react-server-dom-webpack": "19.0.3"
+		"react-server-dom-webpack": "19.0.4",
+		"diff": "^4.0.4",
+		"tar": "^7.5.7"
 	},
 	"packageManager": "yarn@4.9.1"
 }
