--- a/sdk/highlight-next/package.json
+++ b/sdk/highlight-next/package.json
@@ -77,7 +77,7 @@
 		"@types/js-cookie": "^3",
 		"@types/node": "^16.18.113",
 		"chokidar-cli": "^3.0.0",
-		"eslint": "8.39.0",
+		"eslint": "^9.26.0",
 		"rollup": "^4.4.1",
 		"semver": "^7.6.3",
 		"tree-kill": "^1.2.2",
