--- a/e2e/ruby/sinatra/ruby2-logging/Gemfile
+++ b/e2e/ruby/sinatra/ruby2-logging/Gemfile
@@ -1,10 +1,11 @@
 source 'https://rubygems.org'
 
-ruby '~> 2.7.0'
+ruby '~> 3.3.4'
 
 gem 'sinatra'
 gem 'activesupport', '~> 6.1.0' # For Rails.logger compatibility
-gem 'highlight_io', '0.2.2'
+gem 'launchdarkly-server-sdk', '~> 8.0'
+gem 'launchdarkly-observability', path: '../../../../sdk/@launchdarkly/observability-ruby'
 
 gem "rackup", "~> 2.2"
 gem "puma", "~> 6.6"
