--- a/e2e/react-native/package.json
+++ b/e2e/react-native/package.json
@@ -45,6 +45,8 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
+		"@eslint/eslintrc": "^3.3.3",
+		"@eslint/js": "^9.39.2",
 		"@types/jest": "^29.5.12",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
@@ -58,6 +60,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-tailwindcss": "^3.17.5",
 		"eslint-plugin-unused-imports": "^4.3.0",
+		"globals": "^17.3.0",
 		"jest": "^29.2.1",
 		"jest-expo": "~52.0.2",
 		"react-test-renderer": "18.3.1",
