--- a/e2e/react-three-vite/package.json
+++ b/e2e/react-three-vite/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"lint": "eslint . --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -22,14 +22,16 @@
 		"three": "0.165.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.26.0",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
 		"@types/three": "0.165.0",
 		"@vitejs/plugin-react": "^4.3.0",
 		"eslint": "^9.26.0",
-		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"globals": "^16.0.0",
 		"vite": "^5.2.12"
 	}
 }
