--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
 		"typescript": "^5.8.3"
 	},
 	"resolutions": {
+		"p-limit": "^3.1.0",
+		"p-locate": "^5.0.0",
+		"locate-path": "^6.0.0",
+		"find-up": "^5.0.0",
 		"ansi-color@^0.2.1": "patch:ansi-color@npm%3A0.2.1#./.yarn/patches/ansi-color-npm-0.2.1-f7243d10a4.patch",
 		"react@^19.0.0": "19.0.3",
 		"react@19.0.0": "19.0.3",
