--- a/e2e/react-native/package.json
+++ b/e2e/react-native/package.json
@@ -48,16 +48,8 @@
 		"@types/jest": "^29.5.12",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^8.36.0",
-		"@typescript-eslint/parser": "^8.36.0",
-		"eslint": "^8.57.1",
-		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-import": "^2.31.0",
-		"eslint-plugin-prettier": "^5.5.1",
-		"eslint-plugin-react": "^7.37.2",
-		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-tailwindcss": "^3.17.5",
-		"eslint-plugin-unused-imports": "^3.2.0",
+		"eslint": "^8.57.0",
+		"eslint-config-expo": "~8.0.0",
 		"jest": "^29.2.1",
 		"jest-expo": "~52.0.2",
 		"react-test-renderer": "18.3.1",
