--- a/e2e/react-router/package.json
+++ b/e2e/react-router/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint": "eslint src --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -23,15 +23,16 @@
 		"react-router-dom": "^6.16.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.26.0",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"@typescript-eslint/parser": "^5.61.0",
 		"@vitejs/plugin-react-swc": "^3.7.0",
-		"eslint": "^8.44.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint": "^9.26.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.1",
+		"globals": "^16.0.0",
 		"typescript": "^5.0.2",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.2.12"
 	}
 }
