chore: update dependencies in example project
- Added @launchdarkly/react-native-client-sdk version 10.12.5 to dependencies.
- Updated import statement for session replay plugin to use the scoped package @launchdarkly/session-replay-react-native.

--- a/sdk/@launchdarkly/react-native-ld-session-replay/example/package.json
+++ b/sdk/@launchdarkly/react-native-ld-session-replay/example/package.json
@@ -10,6 +10,8 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
+    "@launchdarkly/react-native-client-sdk": "^10.12.5",
+    "@launchdarkly/session-replay-react-native": "workspace:*",
     "react": "19.2.0",
     "react-native": "0.83.0"
   },
