--- a/sdk/@launchdarkly/observability-shared/package.json
+++ b/sdk/@launchdarkly/observability-shared/package.json
@@ -10,7 +10,7 @@
 		"build": "tsc",
 		"codegen": "graphql-codegen",
 		"dev": "tsc --watch",
-		"test": "vitest"
+		"test": "vitest run"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.7",
