--- a/sdk/@launchdarkly/react-native-ld-session-replay/turbo.json
+++ b/sdk/@launchdarkly/react-native-ld-session-replay/turbo.json
@@ -1,7 +1,5 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [".nvmrc", ".yarnrc.yml"],
-  "globalEnv": ["NODE_ENV"],
   "tasks": {
     "build:android": {
       "env": ["ANDROID_HOME", "ORG_GRADLE_PROJECT_newArchEnabled"],
@@ -39,5 +37,6 @@
       ],
       "outputs": []
     }
-  }
+  },
+  "extends": ["//"]
 }
