--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -89,6 +89,9 @@
 		"@graphql-codegen/typescript": "^4.0.1",
 		"@graphql-codegen/typescript-graphql-request": "^6.0.1",
 		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@highlight-run/rrweb": "workspace:*",
+		"@highlight-run/rrweb-rrweb-plugin-sequential-id-record": "workspace:*",
+		"@highlight-run/rrweb-types": "workspace:*",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-metrics-otlp-http": ">=0.57.1 < 0.200.0",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.57.1 < 0.200.0",
@@ -104,8 +107,6 @@
 		"@opentelemetry/semantic-conventions": "^1.28.0",
 		"@rollup/plugin-commonjs": "^28.0.2",
 		"@rollup/plugin-node-resolve": "^16.0.0",
-		"@rrweb/rrweb-plugin-sequential-id-record": "workspace:*",
-		"@rrweb/types": "workspace:*",
 		"@size-limit/file": "^8.1.0",
 		"@types/chrome": "^0.0.268",
 		"@types/imurmurhash": "^0",
@@ -124,7 +125,6 @@
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.3.3",
 		"readdirp": "^3.6.0",
-		"rrweb": "workspace:*",
 		"size-limit": "^8.1.0",
 		"stacktrace-js": "2.0.2",
 		"tslib": "^2.6.2",
