--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -6,6 +6,7 @@
 		"type": "git",
 		"url": "https://github.com/launchdarkly/observability-sdk.git"
 	},
+	"homepage": "https://github.com/launchdarkly/observability-sdk/tree/main/sdk/@launchdarkly/observability-node#readme",
 	"scripts": {
 		"typegen": "tsc -d --emitDeclarationOnly",
 		"dev": "yarn build --watch",
