--- a/sdk/@launchdarkly/mobile-dotnet/.vscode/tasks.json
+++ b/sdk/@launchdarkly/mobile-dotnet/.vscode/tasks.json
@@ -103,6 +103,30 @@
       "problemMatcher": "$msCompile"
     },
     {
+      "label": "Rebuild Android",
+      "type": "shell",
+      "command": "/bin/zsh",
+      "args": [
+        "-lc",
+        "set -e; dotnet clean ${workspaceFolder}/sample/MauiSample9.csproj -c Debug -f net9.0-android; dotnet build ${workspaceFolder}/sample/MauiSample9.csproj -c Debug -f net9.0-android -p:LD_INCLUDE_NATIVE_DEPS=true"
+      ],
+      "options": { "cwd": "${workspaceFolder}/" },
+      "group": "build",
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "Rebuild iOS",
+      "type": "shell",
+      "command": "/bin/zsh",
+      "args": [
+        "-lc",
+        "set -e; dotnet clean ${workspaceFolder}/sample/MauiSample9.csproj -c Debug -f net9.0-ios; dotnet build ${workspaceFolder}/sample/MauiSample9.csproj -c Debug -f net9.0-ios"
+      ],
+      "options": { "cwd": "${workspaceFolder}/" },
+      "group": "build",
+      "problemMatcher": "$msCompile"
+    },
+    {
       "label": "Clean build folders",
       "type": "shell",
       "command": "/bin/zsh",
