--- a/sdk/@launchdarkly/mobile-dotnet/sample/MauiSample9.csproj
+++ b/sdk/@launchdarkly/mobile-dotnet/sample/MauiSample9.csproj
@@ -50,6 +50,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="appsettings.json" />
+		<EmbeddedResource Include="appsettings.Local.json" Condition="Exists('appsettings.Local.json')" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.Contains('android'))">
