--- a/sdk/@launchdarkly/mobile-dotnet/sample/appsettings.json
+++ b/sdk/@launchdarkly/mobile-dotnet/sample/appsettings.json
@@ -1,5 +1,7 @@
 {
   "LaunchDarkly": {
-    "MobileKey": "REPLACE_WITH_YOUR_KEY"
+    "MobileKey": "REPLACE_WITH_YOUR_KEY",
+    "OtlpEndpoint": "https://otel.observability.launchdarkly.com:4318",
+    "BackendUrl": "https://pub.observability.launchdarkly.com/"
   }
 }
