--- a/sdk/@launchdarkly/mobile-dotnet/sample/MauiSample9.csproj
+++ b/sdk/@launchdarkly/mobile-dotnet/sample/MauiSample9.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LaunchDarkly.ClientSdk" Version="5.5.4" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
 	</ItemGroup>
