--- a/sdk/@launchdarkly/mobile-dotnet/sample/appsettings.json
+++ b/sdk/@launchdarkly/mobile-dotnet/sample/appsettings.json
@@ -1,7 +1,9 @@
+// Don't change this file, it should be copied into appsettings.Local.json
+
 {
   "LaunchDarkly": {
     "MobileKey": "REPLACE_WITH_YOUR_KEY",
-    "OtlpEndpoint": "https://otel.observability.launchdarkly.com:4318",
-    "BackendUrl": "https://pub.observability.launchdarkly.com/"
+    "OtlpEndpoint": "https://otel.observability.app.launchdarkly.com:4318",
+    "BackendUrl": "https://pub.observability.app.launchdarkly.com"
   }
 }
