--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
 		"husky": "^9.1.7",
 		"prettier": "^3.5.3",
 		"pretty-quick": "^4.1.1",
-		"turbo": "^2.5.0",
+		"turbo": "2.8.7",
 		"typescript": "^5.8.3"
 	},
 	"resolutions": {
+		"turbo": "2.8.7",
 		"p-limit": "^3.1.0",
 		"p-locate": "^5.0.0",
 		"locate-path": "^6.0.0",
