feat: initial upload of mobile-dotnet (#393)
## Summary

Supports only SR for Android and iOS

<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> **High Risk**
> Large new surface area spanning native Android/iOS build systems, MAUI
bindings, and NuGet packaging/transitive targets; integration issues are
likely (dependency/version conflicts, build failures, runtime
linker/type conflicts).
> 
> **Overview**
> Introduces a new `sdk/@launchdarkly/mobile-dotnet` .NET 9 MAUI Session
Replay SDK, including a cross-platform C# API (`LDNative`,
`ObservabilityOptions`, `SessionReplayOptions`) plus MAUI `View`
extension methods for manual masking (`LDMask`/`LDUnmask`).
> 
> Adds native bridges for **Android** (Gradle/Kotlin library with
`SRLaunch` + masking helpers, and a `net9.0-android` binding project)
and **iOS** (Swift-based `LDObserveBridge` framework + `net9.0-ios`
binding project), along with packaging to ship native artifacts via a
“fat” NuGet (`LaunchDarkly.SessionReplay`) using `buildTransitive`
targets.
> 
> Includes a MAUI sample app demonstrating initialization, privacy
options, and masking flows, plus developer tooling/scripts (VSCode
tasks, XCFramework build script, pack scripts) and repo ignore rules for
.NET build artifacts.
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
c7c0739ff9bfb077584d01099a4332cb62449cad. This will update automatically
on new commits. Configure
[here](https://cursor.com/dashboard?tab=bugbot).</sup>
<!-- /CURSOR_SUMMARY -->

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ sdk/highlight-wordpress/highlight-io/highlight.js
 # Typedoc docs
 sdk/highlight-run/docs
 sdk/@launchdarkly/observability-react-native/docs
+
+# .NET mobile SDK build artifacts
+sdk/@launchdarkly/mobile-dotnet/**/bin/
+sdk/@launchdarkly/mobile-dotnet/**/obj/
+sdk/@launchdarkly/mobile-dotnet/**/.gradle/
+sdk/@launchdarkly/mobile-dotnet/**/*.Local.json
+sdk/@launchdarkly/mobile-dotnet/**/*.csproj.user
+sdk/@launchdarkly/mobile-dotnet/**/*.sln
+sdk/@launchdarkly/mobile-dotnet/**/nupkgs/
