--- a/sdk/@launchdarkly/mobile-dotnet/observability/LDObservability.csproj
+++ b/sdk/@launchdarkly/mobile-dotnet/observability/LDObservability.csproj
@@ -191,7 +191,7 @@
 			<Visible>false</Visible>
 		</AndroidLibrary>
 	</ItemGroup>
-	<!-- Include the module AAR containing SRLaunch (guard per path) -->
+	<!-- Include the module AAR containing ObservabilityBridge (guard per path) -->
 	<ItemGroup Condition="$(TargetFramework.Contains('android')) and '$(LD_INCLUDE_NATIVE_DEPS)' == 'true' and Exists('..\android\native\LDObserve\bin\Release\net9.0-android\outputs\aar\LDObserve-release.aar')">
 		<AndroidLibrary Include="..\android\native\LDObserve\bin\Release\net9.0-android\outputs\aar\LDObserve-release.aar">
 			<Bind>false</Bind>
