fix: correct react native session replay build step

--- a/sdk/@launchdarkly/react-native-ld-session-replay/package.json
+++ b/sdk/@launchdarkly/react-native-ld-session-replay/package.json
@@ -33,8 +33,9 @@
   ],
   "scripts": {
     "example": "yarn workspace session-replay-react-native-example",
+    "build": "bob build",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "prepare": "bob build",
+    "prepack": "bob build",
     "typecheck": "tsc",
     "lint": "echo 'Linting temporarily disabled - TODO: fix ESLint config'",
     "test": "jest",
