--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -40,7 +40,7 @@ jobs:
               uses: android-actions/setup-android@9fc6c4e9069bf8d3d10b2204b1fb8f6ef7065407 # v3.2.2 commit SHA - https://github.com/android-actions/setup-android/releases/tag/v3.2.2
 
             - name: Run unit tests
-              run: ./gradlew :app:testDebugUnitTest
+              run: ./gradlew :app:testComposeDebugUnitTest
 
             - name: Upload test reports
               if: always()
